--- a/layouts/main.jade
+++ b/layouts/main.jade
@@ -99,6 +99,58 @@ html
                     | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             div.b-footer-wrap
                 div.b-footer
+                    div.b-widget
+                        div.b-widget__search
+                            h3.b-widget__title Search
+                            form.b-widget__searchform(action="#", method="get")
+                                input(type="text", value="", placeholder="type and hit enter")
+                        div.b-widget__archive
+                            h3.b-widget__title Archives
+                            ul
+                                li <a href="#">September 2012</a> (6)
+                                li <a href="#">August 2012</a> (2)
+                                li <a href="#">July 2012</a> (2)
+                                li <a href="#">June 2012</a> (4)
+                                li <a href="#">May 2012</a> (3)
+                                li <a href="#">January 2012</a> (1)
+                    div.b-widget
+                        div.b-widget__twitter
+                            h3.b-widget__title Twitter
+                            div.b-widget__twitter-entry
+                                span
+                                    a(href="https://twitter.com/") → Follow us
+                    div.b-widget
+                        div.b-widget__post
+                            h3.b-widget__title Popular Posts
+                            ul.b-widget__post-list
+                                li
+                                    div.b-widget__frame.b-page__img_frame_hover
+                                        a(href="#")
+                                            img(src="#{componentsPath}/b-footer/images/s1.jpg")
+                                    div.b-widget__meta
+                                        h6
+                                            a(href="#") Charming Winter
+                                        span 28th Sep 2012
+                                li
+                                    div.b-widget__frame.b-page__img_frame_hover
+                                        a(href="#")
+                                            img(src="#{componentsPath}/b-footer/images/s2.jpg")
+                                    div.b-widget__meta
+                                        h6
+                                            a(href="#") Trickling Stream
+                                        span 5th Sep 2012
+                                li
+                                    div.b-widget__frame.b-page__img_frame_hover
+                                        a(href="#")
+                                            img(src="#{componentsPath}/b-footer/images/s3.jpg")
+                                    div.b-widget__meta
+                                        h6
+                                            a(href="#") Morning Glory
+                                        span 26th Sep 2012
+                    div.b-widget
+                        div.b-widget__flickr
+                            h3.b-widget__title Flickr
+                            ul.b-widget__flickr-feed
             div.b-footer-site-generator-wrap
                 div.b-footer-site-generator
                     | Copyright Obscura 2012. Design by <a href="http://elemisfreebies.com">elemis</a>. All rights reserved.
