--- a/components/b-page/b-page.scss
+++ b/components/b-page/b-page.scss
@@ -51,12 +51,10 @@ a img {
   border: none;
 }
 
-$components-path: "../../../components";
 
 /* ------------------Font---------------------- */
 /* Open Sans @font-face kit */
 
-$open-sans-path: "#{$components-path}/b-page/fonts";
 
 /* BEGIN Light */
 @font-face {
@@ -171,9 +169,6 @@ $open-sans-path: "#{$components-path}/b-page/fonts";
 /* ------------------Layout---------------------- */
 /* -------------------------------------------- */
 
-$b-page-images-path: "#{$components-path}/b-page/images";
-$b-header-images-path: "#{$components-path}/b-header/images";
-$b-content-images-path: "#{$components-path}/b-content/images";
 
 html {
 //  height: 100%;
@@ -188,7 +183,7 @@ body {
   }
   line-height: 21px;
   letter-spacing: 0.2px;
-  color: #b9b9b9;
+  color: $main-text;
 }
 .push {
   clear: both;
@@ -201,7 +196,7 @@ input,
 textarea {
   background: rgba(0, 0, 0, 0.25);
   border: none;
-  color: #b9b9b9;
+  color: $main-text;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   font-size: 12px;
@@ -219,11 +214,11 @@ p {
   margin-bottom: 20px
 }
 a {
-  color: #65817a;
+  color: $link;
   text-decoration: none;
   @include transition(all, 200ms, ease-in);
   &:hover {
-    color: #86aca3
+    color: $link-hover;
   }
 }
 a.more {
@@ -322,7 +317,7 @@ h2.title a {
   color: #dedede
 }
 .title a:hover {
-  color: #86aca3
+  color: $link-hover
 }
 ul {
   margin-bottom: 20px;
@@ -348,4 +343,29 @@ hr {
   height: 3px;
   margin-top: 10px;
   margin-bottom: 30px;
+}
+.b-page__img_frame_hover {
+  display: block;
+  position: relative;
+//  pointer-events: none;
+  &:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    @include box-shadow(inset 0 0 1px 0 rgba(255,255,255,0.7), 0px 0px 0px 1px rgba(0, 0, 0, 0.44));
+  }
+  a {
+    .more {
+      display: none;
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      text-align: center;
+      text-decoration: none;
+      z-index: 100;
+      background: rgba(0, 0, 0, 0.55) url('#{$b-footer-images-path}/icon-more.png') no-repeat center center;
+    }
+  }
 }
