add page-with-sidebar.jade create full width layout, make columns

--- a/components/b-content/b-content.scss
+++ b/components/b-content/b-content.scss
@@ -233,5 +233,76 @@
       }
     }
   }
+  .b-content-full {
+    @extend %clearfix;
+  }
+  /*-----------------------------------------------------------------------------------*/
+  /*	COLUMNS
+  /*-----------------------------------------------------------------------------------*/
+  .one-half {
+    width: 48%
+  }
+  .one-third {
+    width: 30.66%
+  }
+  .two-third {
+    width: 65.33%
+  }
+  .one-fourth {
+    width: 22%
+  }
+  .three-fourth {
+    width: 74%
+  }
+  .one-fifth {
+    width: 16.8%
+  }
+  .two-fifth {
+    width: 37.6%
+  }
+  .three-fifth {
+    width: 58.4%
+  }
+  .four-fifth {
+    width: 67.2%
+  }
+  .one-sixth {
+    width: 13.33%
+  }
+  .five-sixth {
+    width: 82.67%
+  }
+  .one-half,
+  .one-third,
+  .two-third,
+  .three-fourth,
+  .one-fourth,
+  .one-fifth,
+  .two-fifth,
+  .three-fifth,
+  .four-fifth,
+  .one-sixth,
+  .five-sixth {
+    position: relative;
+    margin-right: 4%;
+    float: left;
+  }
+  .last {
+    margin-right: 0 !important;
+    clear: right;
+  }
+  .column-wrapper {
+    overflow: hidden;
+    width: 100%;
+  }
+  .dropcap {
+    float: left;
+    font-size: 45px;
+    margin: 10px 8px 0 0;
+    text-transform: uppercase;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-weight: bold;
+  }
+
 }
 
