add blog layout, typography, post; add mediaplayer, selectnav, fix some bugs

--- a/components/b-header/b-header.scss
+++ b/components/b-header/b-header.scss
@@ -133,7 +133,7 @@
 
         }
       }
-      .b-menu__selectnav {
+      .selectnav {
         display: none;
         width: 280px;
         margin: 0 auto;
