--- a/components/b-content/b-content.scss
+++ b/components/b-content/b-content.scss
@@ -1,4 +1,7 @@
 @import "mixin.lib";
+/*---------------------------------*/
+/* -------Main wrapper start------ */
+/*---------------------------------*/
 .b-content-wrap {
   @extend %clearfix;
   width: 1010px;
@@ -26,7 +29,8 @@
     text-align: center;
     color: #fff;
   }
-  // ----------Social----------
+
+  /* -------Social block start------ */
   .b-social {
     margin-bottom: 40px;
     text-align: center;
@@ -131,8 +135,10 @@
         }
       }
     }
-
   }
+  /* -------Social block end------ */
+
+  /* -------Content layout start------ */
   .b-content {
     float: left;
     width: 670px;
@@ -151,15 +157,20 @@
       float: none;
     }
   }
+  .b-content-full {
+    @extend %clearfix;
+  }
   .b-content_box_current {
     padding: 20px;
-//    padding-bottom: 0;
     position: relative;
     overflow: hidden;
     @include sass-box-sizing($type: "border");
     @include rgba-background(#000, 0.44);
     @include box-shadow(0px 0px 0px 1px rgba(0, 0, 0, 0.44));
   }
+  /* -------Content layout end------ */
+
+  /* -------Sidebar start------ */
   .b-sidebar {
     float: right;
     width: 310px;
@@ -223,7 +234,7 @@
           }
           span {
             font-size: 11px;
-            color: #797979;
+            color: $meta-link;
           }
         }
         li {
@@ -233,12 +244,346 @@
       }
     }
   }
-  .b-content-full {
-    @extend %clearfix;
+  /* -------Sidebar end------ */
+
+  /* -------Post start------ */
+  .b-post {
+    margin-bottom: 30px;
+    .b-post__meta {
+      margin: -20px -20px 20px;
+      color: $meta-link;
+      @include rgba-background(#000, 0.12);
+      overflow: hidden;
+      position: relative;
+      padding: 0 20px;
+      font-size: 11px;
+      @extend %clearfix;
+      span {
+        margin-top: 6px;
+      }
+      a {
+        color: $meta-link;
+        &:hover {
+          color: $link-hover;
+        }
+      }
+      .likes {
+        a {
+          background: transparent url(#{$b-content-images-path}/icon-like.png) no-repeat left 13px;
+          float: right;
+          position: relative;
+          height: 8px;
+          padding: 6px 0 7px 14px;
+          cursor: pointer;
+        }
+      }
+      .comments {
+        a {
+          background: transparent url(#{$b-content-images-path}/icon-comment.png) no-repeat left 13px;
+          float: right;
+          position: relative;
+          padding: 6px 0 7px 14px;
+          cursor: pointer;
+          margin-right: 10px;
+        }
+      }
+    }
+    .b-post__tags {
+      padding-bottom: 20px;
+      a:before {
+        content: "#";
+        display: inline-block;
+      }
+    }
+    .b-post__nav {
+      background: transparent url(#{$b-content-images-path}/line.png) center top repeat-x;
+      margin: 0 -5px;
+      overflow: hidden;
+      position: relative;
+      padding: 10px 0 0;
+      font-size: 11px;
+      @extend %clearfix;
+      .nav-prev {
+        float: left;
+      }
+      .nav-next {
+        float: right;
+      }
+    }
+    .b-page__img_frame_hover {
+      margin: -20px -20px 20px -20px;
+    }
+    .b-post__video-frame_current {
+      margin: -20px -20px 20px -20px;
+    }
   }
-  /*-----------------------------------------------------------------------------------*/
-  /*	COLUMNS
-  /*-----------------------------------------------------------------------------------*/
+  /* -------Post end------ */
+
+  /* ---------Post Formats start-------- */
+  .b-post_format_image {
+    .icon-image {
+      float: left;
+      a {
+        background: url(#{$b-content-images-path}/icon-image.png) no-repeat left 6px;
+        padding: 0 0 6px 20px;
+        display: block;
+      }
+    }
+  }
+  .b-post_format_quote {
+    .icon-quote {
+      float: left;
+      a {
+        background: url(#{$b-content-images-path}/icon-quote.png) no-repeat left 7px;
+        padding: 0 0 7px 17px;
+        display: block;
+      }
+    }
+  }
+  .b-post_format_video {
+    .icon-video {
+      float: left;
+      a {
+        background: url(#{$b-content-images-path}/icon-video.png) no-repeat left 6px;
+        padding: 0 0 6px 18px;
+        display: block;
+      }
+    }
+  }
+  .b-post_format_audio {
+    .icon-audio {
+      float: left;
+      a {
+        background: url(#{$b-content-images-path}/icon-audio.png) no-repeat left 5px;
+        padding: 0 0 5px 15px;
+        display: block;
+      }
+    }
+    .b-audio {
+      width: 450px;
+      position: relative;
+      margin-bottom: 20px;
+      .b-audio__vinyl {
+        margin-bottom: 0;
+        overflow: hidden;
+        min-height: 125px;
+        dl {
+          position: relative;
+          float: left;
+          padding: 3px 20px 0 10px;
+          margin-left: -9px;
+          @extend %clearfix;
+          .art {
+            position: absolute;
+            .bg {
+              position: absolute;
+              top: -1px;
+              left: -13px;
+              width: 153px;
+              height: 125px;
+            }
+            img {
+              width: 120px;
+              height: 120px;
+              max-width: none;
+            }
+          }
+          dd {
+            overflow: hidden;
+            margin-left: 155px;
+            padding-bottom: 5px;
+            line-height: 20px;
+            &.song {
+              margin-top: 45px;
+              .icon-song {
+                background: url(#{$b-content-images-path}/icon-song.png) no-repeat right 4px;
+                width: 12px;
+                height: 16px;
+                margin-right: 7px;
+                float: left;
+              }
+            }
+            &.artist {
+              .icon-artist {
+                background: url(#{$b-content-images-path}/icon-artist.png) no-repeat right 4px;
+                width: 12px;
+                height: 16px;
+                margin-right: 7px;
+                float: left;
+              }
+            }
+            &.album {
+              .icon-album {
+                background: url(#{$b-content-images-path}/icon-album.png) no-repeat right 4px;
+                width: 12px;
+                height: 16px;
+                margin-right: 7px;
+                float: left;
+              }
+            }
+          }
+        }
+      }
+      .audio {
+        width: 293px;
+        position: absolute;
+        right: 0;
+        top: 3px;
+      }
+    }
+  }
+  .b-post_format_standard {
+    .icon-standard {
+      float: left;
+      a {
+        background: transparent url(#{$b-content-images-path}/icon-standard.png) no-repeat left 5px;
+        padding: 0 0 5px 18px;
+        display: block;
+      }
+    }
+  }
+  .b-post_format_link {
+    .icon-link {
+      float: left;
+      a {
+        background: transparent url(#{$b-content-images-path}/icon-link.png) no-repeat left 5px;
+        padding: 0 0 5px 18px;
+        display: block;
+      }
+    }
+  }
+  .b-post_format_chat {
+    .icon-chat {
+      float: left;
+      a {
+        background: transparent url(#{$b-content-images-path}/icon-chat.png) no-repeat left 6px;
+        padding: 0 0 6px 17px;
+        display: block;
+      }
+    }
+    ul {
+      list-style: none;
+      li {
+        margin-top: 8px;
+        padding-top: 8px;
+        background: transparent url(#{$b-content-images-path}/line.png) repeat-x left top;
+        &:first-child {
+          margin-top: 15px;
+          padding-top: 0;
+          background: none;
+        }
+      }
+    }
+  }
+  /* ---------Post Formats end-------- */
+
+  /* ---------Blog layout start-------- */
+  .b-blog-wrap {
+    .b-post {
+      h2.b-post__title {
+        font-size: 15px;
+        font-weight: bold;
+        letter-spacing: 0.4px;
+        line-height: 21px;
+        margin-bottom: 10px;
+      }
+      .b-post__meta {
+        margin: 0px -20px -20px;
+      }
+    }
+  }
+  .b-nav {
+    @include rgba-background(#000, 0.44);
+    @include box-shadow(0px 0px 0px 1px rgba(0, 0, 0, 0.44));
+    @extend %clearfix;
+    font-weight: bold;
+    .b-nav__prev {
+      float: left;
+      padding: 10px 20px;
+    }
+    .b-nav__next {
+      float: right;
+      padding: 10px 20px;
+    }
+  }
+  /* -------Blog layout end------ */
+
+  /* -------Comments start------ */
+  .b-comments {
+    .b-comments__comments-list {
+      list-style: none;
+      background: transparent url(#{$b-content-images-path}/line.png) repeat-x left bottom;
+      margin-bottom: 30px;
+      padding-bottom: 30px;
+      margin-top: -15px;
+      .b-comments__comment {
+        padding: 20px 0 0 0;
+        background: none;
+        @extend %clearfix;
+      }
+      .b-comments__avatar {
+        float: left;
+        width: 70px;
+        height: 70px;
+        margin-right: 20px;
+      }
+      .b-comments__message {
+        @extend %clearfix;
+        overflow: hidden;
+        padding: 15px 20px 0 20px;
+        @include rgba-background(#000, 0.25);
+        position: relative;
+        .b-comments__reply-link {
+          position: absolute;
+          right: 20px;
+          top: 20px;
+          line-height: 1;
+          font-size: 11px;
+          color: #b9b9b9;
+        }
+        .b-comments__info {
+          margin-bottom: 12px;
+          a {
+            color: $meta-link;
+            &:hover {
+              color: $link-hover;
+            }
+          }
+          h2 {
+            font-size: 15px;
+            margin: 0;
+          }
+          .meta {
+            font-size: 11px;
+            color: $meta-link;
+          }
+        }
+      }
+    }
+    .b-comments__children {
+      margin: 0;
+      padding: 0 0 0 40px;
+      list-style: none;
+    }
+  }
+  .b-comments__form {
+    input {
+      padding: 7px 10px;
+      height: 35px;
+    }
+    textarea {
+      padding: 7px 10px;
+    }
+    #submit {
+      @extend .b-content__button;
+      &:hover {
+        opacity: 0.85;
+      }
+    }
+  }
+  /* -------Comments end------ */
+
+  /* -------Columns start------ */
   .one-half {
     width: 48%
   }
@@ -295,7 +640,9 @@
     overflow: hidden;
     width: 100%;
   }
-  .dropcap {
+  /* -------Columns end------ */
+
+  .b-content__dropcap {
     float: left;
     font-size: 45px;
     margin: 10px 8px 0 0;
@@ -303,6 +650,152 @@
     font-family: 'Open Sans Condensed', sans-serif;
     font-weight: bold;
   }
-
+  .b-post-image {
+    margin-bottom: 30px;
+    @include box-shadow(0px 0px 0px 1px rgba(0, 0, 0, 0.44));
+  }
+  .inset {
+    position: relative;
+    max-width: 100%;
+    line-height: 0;
+    &:before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      @include box-shadow(inset 0 0 1px 0 rgba(255,255,255,0.7));
+      @include sass-box-sizing($type: "border");
+    }
+  }
 }
+/*-------------------------------*/
+/* -------Main wrapper end------ */
+/*-------------------------------*/
 
+/* -------Typography start------ */
+.info-box {
+  background: #7790a6;
+  border: 1px solid #86a2bf;
+  color: #26415c;
+  clear: both;
+  margin: 0 0 20px 0;
+  text-shadow: none;
+  padding: 15px;
+  line-height: 17px;
+}
+.download-box {
+  @extend .info-box;
+  background: #77a984;
+  border: 1px solid #86bf9d;
+  color: #2e4534;
+}
+.warning-box {
+  @extend .info-box;
+  background: #a97777;
+  border: 1px solid #bf8686;
+  color: #531717;
+}
+.note-box {
+  @extend .info-box;
+  background: #cbcc79;
+  border: 1px solid #e7e88c;
+  color: #47451b;
+}
+hr {
+  border: none;
+  background: transparent url(#{$b-content-images-path}/line.png) repeat-x;
+  height: 3px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  clear: both;
+}
+.b-content__button {
+  height: 31px;
+  width: auto;
+  background: #f2f2f2;
+  border: none;
+  color: #383838;
+  font: {
+    family: 'Open Sans Condensed', sans-serif;
+    size: 14px;
+    weight: bold;
+  }
+  line-height: 31px;
+  padding: 0px 18px;
+  margin: 0 8px 0 0;
+  display: inline-block;
+  cursor: pointer;
+  margin-bottom: 20px;
+  @include transition(all, 200ms, ease-in);
+  @include box-shadow(0px 1px 2px -1px rgba(0, 0, 0, 0.5));
+  &:hover {
+    opacity: 0.85;
+  }
+}
+.b-content__button_bg_blue {
+  @extend .b-content__button;
+  background-color: #5f9cb8;
+  color: #2d444e;
+  &:hover {
+    opacity: 0.85;
+  }
+}
+.b-content__button_bg_green {
+  @extend .b-content__button;
+  background-color: #5ca980;
+  color: #2b4638;
+  &:hover {
+    opacity: 0.85;
+  }
+}
+.b-content__button_bg_pink {
+  @extend .b-content__button;
+  background-color: #b55fb8;
+  color: #443144;
+  &:hover {
+    opacity: 0.85;
+  }
+}
+.b-content__button_bg_purple {
+  @extend .b-content__button;
+  background-color: #635fb8;
+  color: #313045;
+  &:hover {
+    opacity: 0.85;
+  }
+}
+.b-content__button_bg_red {
+  @extend .b-content__button;
+  background-color: #ac5757;
+  color: #4a3232;
+  &:hover {
+    opacity: 0.85;
+  }
+}
+.b-content__button_bg_yellow {
+  @extend .b-content__button;
+  background-color: #ac9757;
+  color: #433f32;
+  &:hover {
+    opacity: 0.85;
+  }
+}
+blockquote {
+  margin: 0 0 20px 0;
+  font-size: 16px;
+  font-style: italic;
+  line-height: 25px;
+  font-weight: 300;
+  background: url(#{$b-content-images-path}/quote.png) right top no-repeat;
+  cite {
+    color: $meta-link;
+    display: block;
+    font-style: normal;
+    font-size: 13px;
+    &:before {
+      content: "-";
+      padding-right: 5px;
+    }
+  }
+}
+/* -------Typography end------ */
