fix some bugs, change gulp settings

--- a/components/mixin.lib.scss
+++ b/components/mixin.lib.scss
@@ -50,8 +50,8 @@
 
 // ---------General Variables------------
 
-$components-path: "../../../components";
-$open-sans-path: "#{$components-path}/b-page/fonts";
+$components-path: "../images";
+$open-sans-path: "fonts";
 $b-page-images-path: "#{$components-path}/b-page/images";
 $b-header-images-path: "#{$components-path}/b-header/images";
 $b-content-images-path: "#{$components-path}/b-content/images";
