--- a/layouts/main.jade
+++ b/layouts/main.jade
@@ -8,16 +8,19 @@ html
         meta(name="viewport", content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no")
         title My Site
         link(rel='stylesheet', type='text/css', href='../css/styles.css')
-        script(type='text/javascript' src='../js/b-page/js/jquery-1.7.2.min.js')
-        script(type='text/javascript' src='../js/b-page/js/ddsmoothmenu.js')
-        script(type='text/javascript' src='../js/b-page/js/jquery.backstretch.min.js')
-        script(type='text/javascript' src='../js/b-page/js/jquery.dcflickr.1.0.js')
-        script(type='text/javascript' src='../js/b-page/js/jquery.fitvids.js')
-        script(type='text/javascript' src='../js/b-page/js/jquery.masonry.min.js')
-        script(type='text/javascript' src='../js/b-page/js/mediaelement-and-player.min.js')
-        script(type='text/javascript' src='../js/b-page/js/selectnav.min.js')
-        script(type='text/javascript' src='../js/b-page/js/twitter.min.js')
-        script(type='text/javascript' src='../js/b-page/js/scripts.js')
+        //script(type='text/javascript' src='../js/b-page/js/jquery-1.7.2.min.js')
+        //script(type='text/javascript' src='../js/b-page/js/ddsmoothmenu.js')
+        //script(type='text/javascript' src='../js/b-page/js/jquery.backstretch.min.js')
+        //script(type='text/javascript' src='../js/b-page/js/jquery.dcflickr.1.0.js')
+        //script(type='text/javascript' src='../js/b-page/js/jquery.fitvids.js')
+        //script(type='text/javascript' src='../js/b-page/js/jquery.masonry.min.js')
+        //script(type='text/javascript' src='../js/b-page/js/mediaelement-and-player.min.js')
+        //script(type='text/javascript' src='../js/b-page/js/selectnav.min.js')
+        //script(type='text/javascript' src='../js/b-page/js/twitter.min.js')
+        //script(type='text/javascript' src='../js/b-page/js/scripts.js')
+        //script(type='text/javascript' src='../js/global.js')
+        script(type='text/javascript' src='../js/main.js')
+        //script(type='text/javascript' src='../js/main.min.js')
         script.
              $.backstretch("#{componentsPath}/b-page/images/bg/1.jpg");
     body
